--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
 </style> 
 
   
-  <h1> Black Mountain Relief </h1>
+  <h1> Black Mountain Relief Hub</h1>
   <br>
 <!-- REMINDER: UPDATE THE DATE BELOW WHENEVER YOU UPDATE THE INFORMATION --!>
  <p>Last updated (Actualizado) 10/15/2024</p>
