--- a/index.html
+++ b/index.html
@@ -13,17 +13,32 @@
     border-spacing: 0;
     border: 3px solid darkgray;
     width: 100%;
-    overflow: scroll;
+    overflow-x: auto; /* scrollable aspects for table */
+    display: block; 
+    font-size: 16px; 
   }
 
-  th,
+  th {
+    background: gray;
+  },
   td {
-    padding: 20px;
-  }
+    padding: 15px;
+    word-wrap: break-word;
+    text-align: left;
 
+  }
+        tr:nth-child(odd) {
+            background-color: #8F9AA5;
+        }
   body {
     background-color: OffWhite;
+    margin:0;
+    padding: 0;
   }
+
+  tr:nth-child(odd) {
+            background-color:# D3D3D3
+        }
 </style>
 
 
