--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Table template</title>
-  <link href="minimal-table.css" rel="stylesheet" type="text/css">
+  <title>Black Mountain Resources</title>
+  <!-- <link href="minimal-table.css" rel="stylesheet" type="text/css"> -->
 </head>
 <style>
+  
   table {
     border-collapse: collapse;
     border-spacing: 0;
@@ -16,13 +17,14 @@
     overflow-x: auto; /* scrollable aspects for table */
     display: block; 
     font-size: 16px; 
+    margin-top: 10px;
   }
 
   th {
     background: gray;
-  },
+  }
   td {
-    padding: 15px;
+    padding: 10px;
     word-wrap: break-word;
     text-align: left;
 
@@ -32,12 +34,37 @@
         }
   body {
     background-color: OffWhite;
+    font-family: Arial, Helvetica, sans-serif;
     margin:0;
     padding: 0;
   }
+  /* Collapsible section */
+  .collapsible {
+            background-color: #333;
+            color: white;
+            cursor: pointer;
+            padding: 10px;
+            width: 100%;
+            text-align: left;
+            outline: none;
+            font-size: 18px;
+            border: none;
+        }
+        .collapsible.active:after {
+            content: "\2212"; /* Unicode for "-" sign */
+        }
 
+        .collapsible-content {
+            display: none;
+            overflow: hidden;
+            background-color: #f9f9f9;
+        }
+
+  table tr:hover {
+    background-color: #D3D3D3;
+  }
   tr:nth-child(odd) {
-            background-color:# D3D3D3
+            background-color:#f1f1f1
         }
 </style>
 
