add table cell borders in index.html

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 
   th {
     background: gray;
+    border: 1px solid #dcdcdc;
   }
   td {
     padding: 10px;
     word-wrap: break-word;
     text-align: left;
+    border: 1px solid #dcdcdc;
 
   }
         tr:nth-child(odd) {
