add file structures and html pages with nav links

--- a/index.html
+++ b/index.html
@@ -1,461 +1,25 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Table template</title>
-    <link href="minimal-table.css" rel="stylesheet" type="text/css">
-  </head>
-<style> 
-  table {
-	border-collapse: collapse;
-	border-spacing: 0;
-	border: 3px solid darkgray;
-	width: 100%;
-	overflow: scroll;
-  }
 
-  th,
-  td {
-    padding: 20px;
-}
-
-body {
-  background-color:OffWhite;
-  }
-</style> 
-
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Black Mountain Resources</title>
+  <link rel="stylesheet" href="styles/styles.css" />
+</head>
+  <header>
+    <h1>Black Mountain Resources</h1>
+  </header>
   
-  <h1> Black Mountain Relief Hub</h1>
-  <br>
-<!-- REMINDER: UPDATE THE DATE BELOW WHENEVER YOU UPDATE THE INFORMATION --!>
- <p>Last updated (Actualizado) 10/15/2024</p>
-<div>
-        <h2> Useful Links:</h2>
-        <ul>
-          <li>
-            <a
-              href="http://www.blackmountainrecovery.org">Town of Black Mountain's Site</a>
-          </li>
-          <li>
-            <a 
-			href="https://forms.gle/J2XJuHDAWMXzx2BP6">Volunteer Application</a>
-          </li>
-        </ul>
-      </div>
-<div>
-   <h2>Mission Statement:</h2>
-        <p>
-          The Black Mountain Volunteer Corps is a community led coalition
-          dedicated to supporting volunteer initiatives, programs and actions of
-          community service in the wake of Hurricane Helene.
-        </p>
-</div>
-  <br>
-  <h2>Community Resources List (<i>Recursos Publicos</i>): Black Mountain and Swannanoa</h2>
-  <br>
-  <h3>Official Town-Directed Resources (<i>Recursos Officiales Patrocinados por la Alcaldía</i>)</h3>
-  <br>
-
-<!-- To update a table:
-To change the words in a table cell, just change the words.
-To delete a row, delete the <tr> and </tr> tags and everything in between.
-To add a row, add <tr> and </tr> tags and then add the information in the row, with each cell enclosed in <td> tags </td>
- --!>  
-  <div style="overflow-x: auto;">
-  <table style="width: 100%; min-width: 600px;">
-
-<tr>
-<th>Provider/<i>Proveedor</i></th>	
-<th>Address/<i>Direccion</i></th>	
-<th>Hours of Operation/<i>Horario</i></th>	
-<th>Resources Provided/<i>Recursos disponibles</i></th>
-</tr>
-<tr>
-	<td>Ingles Market</td>
-	<td>550 NC-9 Black Mountain, NC 28711</td>
-	<td>7 days/week (<i>todos los días</i>) 9:00 am to 7:00 pm</td>
-	<td><ul>
-                <li>
-                  Dry goods & miscellaneous supplies distribution, including ice
-                  (<i>distribución de alimentos y provisiones, incluyendo hielo</i>)
-                </li>
-                <li>
-                  Potable water resupply – bring your own jugs (<i>agua potable –
-                  traiga sus propias botellas</i>)
-                </li>
-              </ul>
-</td>
-</tr>
-<tr>
-	<td>Black Mountain Swannanoa Chamber of Commerce and Visitors Center</td>	
-	<td>201 E. State St. Black Mountain, NC 28711</td>	
-	<td>7 days/week (<i>todos los días</i>) 9:00 am to 5:00 pm</td>	
-	<td><ul>
-                <li>
-                  Public requests for information and support: Information
-                  tables outside (<i>Solicitud de ayuda</i>)
-                </li>
-                <li>
-                  Volunteer coordination: Chamber building (no public access)
-                  (<i>Coordinacion de voluntarios</i>)
-                </li>
-              </ul>
- </td>
-</tr>
-<tr>
-	<td>First Baptist Church of Black Mountain</td>	
-	<td>130 Montreat Road Black Mountain, NC 28711</td>	
-	<td>Through Wednesday, 10/16/24 (<i>hasta el miercoles, 10/16/24</i>): 9:00 am to 3:00 pm. No services provided after 10/16/2024 (<i>no se prestaron servicios después del 10/16/2024</i>). </td>		
-	<td>Basic medical & mental health care (<i>primeros auxilios y salud mental</i>) </td>
-</tr>
-<tr>
-	<td>Black Mountain Pool (<i>piscina</i>) </td>	
-	<td>401 Laurel Circle Dr., Black Mountain NC 28711</td>	
-	<td>Monday through Saturday (<i>lunes a sábado</i>), 9:00 am to 6:00 pm Sunday (<i>domingo</i>) 10:00 am to 6:00 pm</td>	
-	<td> <ul>
-                <li>
-                  Potable water resupply – bring your own jugs (<i>agua potable –
-                  traiga sus propias botellas</i>)
-                </li>
-                <li>
-                  Dry goods & miscellaneous supplies distribution (<i>distribución
-                  de alimentos y provisiones</i>)
-                </li>
-                <li>Landline phone (<i>teléfono fijo</i>)</li>
-                <li>Solar showers (<i>duchas solares</i>)</li>
-              </ul>
- </td>
-</tr>
-	</table>
-</div>
-
-<h3>Unofficial Voluntary Resources (<i>Recursos Voluntarios no Officiales</i>)</h3>
--<br>
-<p>(INFORMATION PROVIDED ONLY AS A COURTESY; THE TOWN OF BLACK MOUNTAIN IS NOT RESPONSIBLE FOR THIS INFORMATION; <i>INFORMACIÓN PROVISTA SOLO COMO CORTESIA, EL PUEBLO DE BLACK MOUNTAIN NO ES RESPONSABLE POR ESTA INFORMACIÓN)</i></p>
-<br>
-<h4> Hot Meals </h4>
-<br>
-<div style="overflow-x: auto;">
-<table style="width: 100%; min-width: 600px;">
-<tr>
-<th style="width:25%"> Provider/<i>Proveedor</i></th>	
-<th style="width:25%">Address/<i>Direccion</i></th>	
-<th style="width:50%">Hours of Operation/<i>Horario</i></th>
-</tr>
-<tr >
-<td>Ingles Market (World Central Kitchen)</td>
-<td>550 NC-9<br>Black Mountain, NC 28711</td>
-<td>7 days/week (<i>todos los días</i>):<br>lunch and dinner provided for
-	carry-out, approximately 12:00 pm and 5:30 pm (<i>almuerzo y cena
-	para llevar, aproximadamente a las 12:00 pm y 5:30 pm</i>)</td>
- </tr>
- <tr>
- <td>Valley Hope Church</td>
- <td>115 Rockdale Rd,<br>Swannanoa, NC 28778</td>
- <td>Monday to Friday (<i>lunes a viernes</i>): 4:30 to 6:00 pm</td> 
- </tr>
- <tr>
- <td>United Methodist Church (operated by Bounty and Soul) <i>Iglesia Metodista</i></td>
- <td>216 Whitson Ave.<br>Swannanoa, NC 28778</td>
- <td>Monday – Friday (<i>lunes a viernes</i>): 10:00 am – 5:00 pm<br>Saturday and Sunday (<i>sabado y domingo</i>): 10:00 am – 3:00 pm</td>
- </tr>
- </table>
- </div>
- <br>
- <h4> Dry goods & miscellaneous supplies distribution (<i>distribución de alimentos y provisiones</i>) </h4>
- <br>
-<div style="overflow-x: auto;">
-<table style="width: 100%; min-width: 600px;">
- <tr>
- <th>Provider/<i>Proveedor</i></th>	
-<th>Address/<i>Direccion</i></th>	
-<th>Hours of Operation/<i>Horario</i></th>
-</tr>
-<tr>
-<td>The Railyard</td>
-<td>141 Richardson Blvd.<br>Black Mountain, NC 28711</td>
-<td>7 days/week (<i>todos los días</i>)<br>8:00 am – 5:00 pm</td>
-</tr>
-<tr>
-<td>Black Mountain Presbyterian Church</td>
-<td>117 Montreat Rd., Black Mountain NC 28711</td>
-<td>Monday to Friday (<i>lunes a viernes</i>), 10:00 am – 4:00 pm,<br>Saturday (<i>sabado</i>) 10:00 am – 2:00 pm, and Sunday (<i>domingo</i>)<br>1:00 – 4:00 pm</td>
-</tr>
-<tr>
-<td>Cragmont Assembly</td>
-<td>1233 N. Fork Rd<br>Black Mountain, NC 28711</td>
-<td>7 days/week (<i>todos los días</i>)<br>10:00 am – 6:00 pm</td>
-</tr>
-<tr>
-<td>Meadowbrook Church</td>
-<td>204 Blue Ridge Road Black Mountain, NC 28711</td>
-<td>Monday -Friday Hours TBD</td>
-</tr>
-<tr>
-<td>Swannanoa Public Library(Biblioteca Publica)</td>
-<td>101 W. Charleston Ave.<br>Swannanoa, NC 28778</td>
-<td>7 days/week (<i>todos los días</i>)<br>10:00 am – 3:00 pm</td>
-</tr>
-<tr>
-<td>Valley Hope Church</td>
-<td>115 Rockdale Rd,<br>Swannanoa, NC 28778</td>
-<td>Monday to Friday (<i>lunes a viernes</i>): 4:00 to 6:00 pm<br>Sunday(<i>domingo</i>): 12:00 pm</td>
-</tr>
-<tr>
-<td>Harley Davidson</td>
-<td>20 Patton Cove Road<br>Swannanoa, NC 28778</td>
-<td>7 days/week (<i> los días</i>)<br>9:00 am to 5:00 pm
-</td>
-</tr>
-</table>
-</div>
-<br>
-<h4>Potable water resupply – bring your own jugs (<i>agua potable – traiga sus propias botellas</i>)</h4>
-<br>
-<div style="overflow-x: auto;">
-<table style="width: 100%; min-width: 600px;">
-<tr>
-<th style="width:25%"> Provider/<i>Proveedor</i></th>	
-<th style="width:25%">Address/<i>Direccion</i></th>	
-<th style="width:50%">Hours of Operation/<i>Horario</i></th>
-</tr>
-<tr>
-<td>The Railyard</td>
-<td>141 Richardson Blvd.<br />Black Mountain, NC 28711</td>
-<td>7 days/week (<i>todos los días</i>)<br />8:00 am – 5:00 pm</td>
-</tr>
-<tr>
-<td>United Methodist Church (operated by Bounty and Soul) <i>Iglesia Metodista</i></td>
-<td>216 Whitson Ave.<br />Swannanoa, NC</td>
-<td>Monday to Friday (<i>lunes a viernes</i>): 10:00 am to 5:00 pm<br />Saturday and Sunday (<i>sabado y domingo</i>): 10:00 am – 3:00 pm
-</td>
-</tr>
-<tr>
-<td>Valley Hope Church</td>
-<td>115 Rockdale Rd,<br />Swannanoa, NC 28778
-</td>
-<td>Monday to Friday (<i>lunes a viernes</i>): 4:30 to 6:00 pm</td>
-</tr>
-</table>
-</div>
-<br>
-<h4>Medical & mental health care (<i>Atencion medica y Salud Mental</i>)</h4>
-<br>
-<div style="overflow-x: auto;">
-<table style="width: 100%; min-width: 600px;">
-<tr>
-<th style="width:25%"> Provider/<i>Proveedor</i></th>	
-<th style="width:25%">Address/<i>Direccion</i></th>	
-<th style="width:50%">Hours of Operation/<i>Horario</i></th>
-</tr>
-<tr>
-<td>First Baptist Church of Swannanoa
-</td>
-<td>503 Park St.<br />Swannanoa, NC 28778
-</td>
-<td>
-  Monday to Saturday (<i>lunes a sabado</i>), 9:00 am to 6:00 pm<br />Sunday
-  (<i>domingo</i>) 12:00 – 5:00 pm<br />Through Sunday 10/20, services
-  provided free of charge from 9:00 am – 5:00 pm (<i>hasta el domingo
-  10/20, servicios disponible sin costo de 9:00 am – 5:00 pm</i>)
-</td>
-</tr>
-<tr>
-<td>Novant Health-Urgent Care</td>
-<td>201 NC-9, Black Mountain NC 28711</td>
-<td>
-  From Monday, 10/21, will resume normal operations from 8:00 am –
-  8:00 pm (<i>a partir del lunes 10/21, se reanudaran las operaciones
-  normales de 8:00 am – 8:00 pm</i>)
-</td>
-</tr>
-</table>
-</div>
-<br>
-<h4>Pharmacies (<i>farmacias</i>)</h4>
-<br>
-<div style="overflow-x: auto;">
-<table style="width: 100%; min-width: 600px;">
-<tr>
-<th style="width:25%"> Provider/<i>Proveedor</i></th>	
-<th style="width:25%">Address/<i>Direccion</i></th>	
-<th style="width:50%">Hours of Operation/<i>Horario</i></th>
-</tr>
-<tr>
-<td>Sunshine Pharmacy</td>
-<td>206 E. State St. #1<br />Black Mountain, NC 28711
-</td>
-<td>Hours established by pharmacy (<i>horario establecido por la farmacia</i>)</td>
-</tr>
-<tr>
-<td>HealthRidge Pharmacy</td>
-<td>3130 US-70<br />Black Mountain, NC 28711</td>
-<td>Hours established by pharmacy (<i>horario establecido por la farmacia</i>)
-</td>
-</tr>
-<tr>
-<td>CVS Pharmacy (drive-through only – <i>solo autoservicio</i>)</td>
-<td>425 W. State St.<br />Black Mountain, NC 28711</td>
-<td>Hours established by pharmacy (<i>horario establecido por la farmacia</i>)
-</td>
-</tr>
-<tr><td>Ingles Market</td>
-<td>550 NC-9<br />Black Mountain, NC 28711</td>
-<td>Hours established by pharmacy (<i>horario establecido por la farmacia</i>)
-</td>
-</tr>
-<tr>
-<td>PSA Clinic Pharmacy</td>
-<td>2294 US-70<br />Swannanoa, NC 28778</td>
-<td>Hours established by pharmacy (<i>horario establecido por la farmacia</i>)
-</td>
-</tr>
-</table>
-</div>
-<br>
-<h4>Veterinary Care (<i>Veterinarios</i>)</h4>
-<br>
-<div style="overflow-x: auto;">
-<table style="width: 100%; min-width: 600px;">
-<tr>
-<th style="width:25%"> Provider/<i>Proveedor</i></th>	
-<th style="width:25%">Address/<i>Direccion</i></th>	
-<th style="width:50%">Hours of Operation/<i>Horario</i></th>
-</tr>
-<tr>
-<td>Pet Emergency(<i>Emergencias</i>)</td>
-<td>call 828-299-1433<br />choose option 1</td>
-<td></td>
-</tr>
-<tr>
-<td>ASPCA NC Animals Hotline</td>
-<td>888-808-0810</td>
-<td>7am-7pm EST 7 Days a Week</td>
-</tr>
-</table>
-</div>
-<br>
-<h4>Mobile hot showers (<i>Regaderas calientes</i>)</h4>
-<br>
-<div style="overflow-x: auto;">
-<table style="width: 100%; min-width: 600px;">
-<tr>
-<th style="width:25%"> Provider/<i>Proveedor</i></th>	
-<th style="width:25%">Address/<i>Direccion</i></th>	
-<th style="width:50%">Hours of Operation/<i>Horario</i></th>
-</tr>
-<tr>
-<td>Lake Tomahawk</td>
-<td>401 Laurel Circle Dr<br />Black Mountain, NC 28711</td>
-<td>Monday to Saturday (<i>lunes a sabado</i>): 9:00 am to 6:00 pm</td>
-</tr>
-<tr>
-<td>Valley Hope Church</td>
-<td>115 Rockdale Rd,<br/>Swannanoa, NC 28778</td>
-<td>Monday to Friday (<i>lunes a viernes</i>): 9:00 am to 6:00 pm</td>
-</tr>
-<tr>
-<td>Swannanoa Ingles parking lot (<i>estacionamiento</i>)</td>
-<td>2299 US-70, Swannanoa NC 28778</td>
-<td></td>
-</tr>
-</table>
-</div>
-<br>
-<h4>Clothing, shoes, blankets and towels (<i>ropa, zapatos, cobijas y
-  toallas</i>)</h4>
-<br>
-<div style="overflow-x: auto;">
-<table style="width: 100%; min-width: 600px;">
-<tr>
-<th style="width:25%"> Provider/<i>Proveedor</i></th>	
-<th style="width:25%">Address/<i>Direccion</i></th>	
-<th style="width:50%">Hours of Operation/<i>Horario</i></th>
-</tr>
-<tr>
-<td>Phil's Bar-B-Que Pit</td>
-<td>701 NC-9<br />Black Mountain, NC 28711</td>
-<td>7 days/week (<i>todos los días</i>)<br /><span
-	class="text-red-600 font-semibold"
-	>Please note: Leaving donations in this location is
-	prohibited.<br /><i>Atención por favor: Está prohibido dejar
-	donaciones en este lugar</i>.</span
-  >
-</td>
-</tr>
-</table>
-</div>
-<br>
-<h4>FEMA Application Support</h4>
-<br>
-<div style="overflow-x: auto;">
-<table style="width: 100%; min-width: 600px;">
-<tr>
-<th style="width:25%"> Provider/<i>Proveedor</i></th>	
-<th style="width:25%">Address/<i>Direccion</i></th>	
-<th style="width:50%">Hours of Operation/<i>Horario</i></th>
-</tr>
-<tr>
-<td>Valley Hope Church</td>
-<td>115 Rockdale Rd,<br />Swannanoa, NC 28778</td>
-<td>Monday to Saturday (<i>lunes a sabado</i>): 4:00 to 6:00 pm
-</td>
-</tr>
-</table>
-</div>
-<br>
-<h4>General Disaster Relief</h4>
-<br>
-<div style="overflow-x: auto;">
-<table style="width: 100%; min-width: 600px;">
-<tr>
-<th style="width:25%"> Provider/<i>Proveedor</i></th>	
-<th style="width:25%">Address/<i>Direccion</i></th>	
-<th style="width:50%">Hours of Operation/<i>Horario</i></th>
-</tr>
-<tr>
-<td>Red Truck Men<br />The Railyard</td>
-<td>141 Richardson Blvd.<br />Black Mountain, NC 28711</td>
-<td>7 days/week (<i>todos los días</i>)<br />7:30 am – 6:00 pm
-</td>
-</tr>
-<tr>
-<td>Cragmont Assembly</td>
-<td>1233 N. Fork Rd<br />Black Mountain, NC 28711</td>
-<td>7 days/week (<i>todos los días</i>)<br />10:00 am – 6:00 pm</td>
-</tr>
-<tr>
-<td>Mellie's Moonshiners</td>
-<td>Dispatch hotline: 828-771-8576</td>
-<td>Supply delivery to hard to reach areas, chainsaw assistance<br />(<i>entrega
-  de suministros a zonas de difícil acceso, asistencia con
-  motosierra</i>)</td>
-</tr>
-<tr>
-<td>Crisis Clean-Up</td>
-<td>Hotline: 844-965-1386</td>
-<td>
-  Muck out, Trees, Tarp, Debris<br /><br />National organization
-  connecting clean-up needs with NGOs providing help. Hotline valid
-  through 10/25/24 and may be extended.<br />(<i>Organización nacional
-  que conecta personas con necesidades de limpieza con las ONG que
-  brindan ayuda. Línea válida hasta el 10/25/24 y puede extenderse</i>).
-</td>
-</tr>
-
-</table>
+  <nav>
 
 
-<tr>
-<th>
-
-</div>
-
-
-  </body>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="resources.html">Community Resources</a></li>
+      <li><a href="supplies.html">Request Supplies</a></li>
+      <li><a href="volunteers.html">Volunteering</a></li>
+      <li><a href="about.html">About</a></li>
+    </ul>
+  </nav>
 </html>
-
