add top nav to pages

--- a/about.html
+++ b/about.html
@@ -5,20 +5,31 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Black Mountain Resources</title>
+  <link rel="stylesheet" href="/styles/styles.css" />
+  <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-  <header>
-    <h1>About</h1>
-  </header>
+<header>
+  <h1>Black Mountain Resources Hub</h1>
+</header>
+
+
+
+<div class="topnav" id="myTopnav">
+  <a href="index.html" class="active">Home</a>
+  <a href="resources.html">Community Resources</a>
+  <a href="supplies.html">Request Supplies</a>
+  <a href="volunteers.html">Volunteers</a>
+  <a href="about.html">About</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
   
-  <nav>
 
-
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="resources.html">Community Resources</a></li>
-      <li><a href="supplies.html">Request Supplies</a></li>
-      <li><a href="volunteers.html">Volunteering</a></li>
-      <li><a href="about.html">About</a></li>
-    </ul>
-  </nav>
+<hgroup>
+  <h2>About</h2>
+  <p>Last Updated 19 October 2024</p>
+</hgroup>
+</body>
 </html>
