--- a/resources.html
+++ b/resources.html
@@ -25,14 +25,21 @@
     <i class="fa fa-bars"></i>
   </a>
 </div>
-  
+<source type="text/html" data="/assets/townDirected.html"></object>
 
-  <body>  
+  <body>  <br>
     <hgroup>
     <h2>Community Resources</h2>
     <p>Last Updated 19 October 2024</p>
   </hgroup>
-
+  <br>
+    <!-- Navigation Bar -->
+    <nav class="tableNav">
+      <ul><li><a href="#table1" class="tab-link">Useful Links</a></li><object type="text/html" data="table.html"></object>
+        <li><a href="/assets/townDirected.html" class="tab-link">Town Directed</a></li>
+        <li><a href="/assets/voluntary.html" class="tab-link">Unofficial</a></li>
+      </ul>
+    </nav>
 
 </body>
 </html>
