--- a/supplies.html
+++ b/supplies.html
@@ -28,8 +28,9 @@
   
 
   <body>  
-    <header>
+    <hgroup>
     <h2>Request Supplies</h2>
-    </header>
+    <p>Last Updated 19 October 2024</p>
+  </hgroup>
 </body>
 </html>
