fix official div in index.html

--- a/index.html
+++ b/index.html
@@ -46,10 +46,19 @@
         </a>
     </div>
 
-    <hgroup>
-        <h2>Community Resources List (Recursos Publicos): Black Mountain and Swannanoa</h2>
-        <p>Last Updated 19 October 2024</p>
-    </hgroup>
+    <hgroup></br>
+        <h2>Community Resources List (Recursos Publicos): Black Mountain and Swannanoa</h2></br>
+        <p><a
+          href="http://www.blackmountainrecovery.org">Town of Black Mountain</a> &numsp;
+ <a href="https://forms.gle/J2XJuHDAWMXzx2BP6">Volunteer Application</a></hgroup>
+  </br>
+  <p></p><strong>Mission Statement:</strong></br>
+    <p>
+      The Black Mountain Volunteer Corps is a community led coalition
+      dedicated to supporting volunteer initiatives, programs and actions of
+      community service in the wake of Hurricane Helene.
+    </p></br><p><strong>Last Updated: 15 October 2024</strong></p>
+  </br></p>
     
     <div class="tab-content">
       <section >
