add content onto index.html

--- a/index.html
+++ b/index.html
@@ -144,14 +144,59 @@ Author: Code with the Carolinas
             <tr>
               <td>Ingles Market</td>
               <td>550 NC-9 Black Mountain, NC 28711</td>
-              <td>7 days/week, 9:00 am to 7:00 pm</td>
-              <td>Dry goods, ice, potable water</td>
+              <td>7 days/week (<i>todos los días</i>), 9:00 am to 7:00 pm</td>
+              <td><ul>
+                <li>
+                  Dry goods & miscellaneous supplies distribution, including ice
+                  (<i>distribución de alimentos y provisiones, incluyendo hielo</i>)
+                </li>
+                <li>
+                  Potable water resupply – bring your own jugs (<i>agua potable –
+                  traiga sus propias botellas</i>)
+                </li>
+              </ul>
+</td>
             </tr>
             <tr>
-              <td>Chamber of Commerce</td>
+              <td>Black Mountain Swannanoa Chamber of Commerce and Visitors Center</td>
               <td>201 E. State St., Black Mountain, NC 28711</td>
-              <td>7 days/week, 9:00 am to 5:00 pm</td>
-              <td>Public info requests, volunteer coordination</td>
+              <td>7 days/week, (<i>todos los días</i>), 9:00 am to 5:00 pm</td>
+              <td><ul>
+                <li>
+                  Public requests for information and support: Information
+                  tables outside (<i>Solicitud de ayuda</i>)
+                </li>
+                <li>
+                  Volunteer coordination: Chamber building (no public access)
+                  (<i>Coordinacion de voluntarios</i>)
+                </li>
+              </ul>
+ </td>
+            </tr>
+            <tr>
+              <td>First Baptist Church of Black Mountain</td>
+              <td>130 Montreat Road Black Mountain, NC 28711</td>
+              <td>Through Wednesday, 10/16/24 (<i>hasta el miercoles, 10/16/24<i></i>): 9:00 am to 3:00 pm. No services provided after 10/16/2024 <i>(no se prestaron servicios después del 10/16/2024)</i>.</td>
+              <td><ul>
+                <li>Public info requests, volunteer coordination</li></ul></td>
+            </tr>
+            <tr>
+              <td>Black Mountain Pool</td>
+              <td>401 Laurel Circle Dr., Black Mountain NC 28711</td>
+              <td>Monday through Saturday <i>(lunes a sábado)</i>, 9:00 am to 6:00 pm Sunday <i>(domingo)</i> 10:00 am to 6:00 pm</td>
+              <td> <ul>
+                <li>
+                  Potable water resupply – bring your own jugs (<i>agua potable –
+                  traiga sus propias botellas</i>)
+                </li>
+                <li>
+                  Dry goods & miscellaneous supplies distribution (<i>distribución
+                  de alimentos y provisiones</i>)
+                </li>
+                <li>Landline phone (<i>teléfono fijo</i>)</li>
+                <li>Solar showers (<i>duchas solares</i>)</li>
+              </ul>
+ </td>
             </tr>
           </tbody>
         </table>
@@ -181,9 +226,10 @@ Author: Code with the Carolinas
             </tr>
 
  -->  
-    <h2>Unofficial Voluntary Resources (<i></i> )
+    <h2>Unofficial Voluntary Resources (<i>Recursos Voluntarios no Officiales</i>)
     </h2></br>
-
+    <p>(INFORMATION PROVIDED ONLY AS A COURTESY; THE TOWN OF BLACK MOUNTAIN IS NOT RESPONSIBLE FOR THIS INFORMATION; <i>INFORMACIÓN PROVISTA SOLO COMO CORTESIA, EL PUEBLO DE BLACK MOUNTAIN NO ES RESPONSABLE POR ESTA INFORMACIÓN)</i></p>
+<br>
     <!-- Sub-Page Navigation Tabs for each grouping of Unofficial Resources
            **** Black Mountain Volunteer Corps to update for UNOFFICIAL Non-Town Directed Resources Tables ****  
     These are the groupings as of 2024-10-19:
@@ -233,28 +279,26 @@ Author: Code with the Carolinas
                   <th>Provider</th>
                   <th>Address</th>
                   <th>Hours of Operation</th>
-                  <th>Resources Provided</th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td>Ingles Market</td>
-                  <td>550 NC-9 Black Mountain, NC 28711</td>
-                  <td>7 days/week, 9:00 am to 7:00 pm</td>
-                  <td>
-                    <ul>
-                      <li> goods & miscellaneous supplies distribution, including ice (distribución de alimentos y
-                        provisiones, incluyendo hielo) </li>
-                      <li>tbs</li>
-                    </ul>
-                  </td>
-                </tr>
-                <tr>
-                  <td>Chamber of Commerce</td>
-                  <td>201 E. State St., Black Mountain, NC 28711</td>
-                  <td>7 days/week, 9:00 am to 5:00 pm</td>
-                  <td>Public info requests, volunteer coordination</td>
-                </tr>
+                <tr >
+                  <td>Ingles Market (World Central Kitchen)</td>
+                  <td>550 NC-9<br>Black Mountain, NC 28711</td>
+                  <td>7 days/week (<i>todos los días</i>):<br>lunch and dinner provided for
+                    carry-out, approximately 12:00 pm and 5:30 pm (<i>almuerzo y cena
+                    para llevar, aproximadamente a las 12:00 pm y 5:30 pm</i>)</td>
+                   </tr>
+                   <tr>
+                    <td>Valley Hope Church</td>
+                    <td>115 Rockdale Rd,<br>Swannanoa, NC 28778</td>
+                    <td>Monday to Friday (<i>lunes a viernes</i>): 4:30 to 6:00 pm</td> 
+                    </tr>
+                    <tr>
+                    <td>United Methodist Church (operated by Bounty and Soul) <i>Iglesia Metodista</i></td>
+                    <td>216 Whitson Ave.<br>Swannanoa, NC 28778</td>
+                    <td>Monday – Friday (<i>lunes a viernes</i>): 10:00 am – 5:00 pm<br>Saturday and Sunday (<i>sabado y domingo</i>): 10:00 am – 3:00 pm</td>
+                    </tr>
               </tbody>
             </table>
 <!-- Hot Meals Table: End-->
@@ -264,7 +308,7 @@ Author: Code with the Carolinas
 
         </nav><br>
         <h2>Potable Water Supply - Bring your Own Jugs</h2>
-        <p>Details about the first official resource.</p>
+        <p>(<i>agua potable – traiga sus propias botellas</i>)</p>
         <div class="table-container">
           <table href="#subtab1-2">
             <thead>
@@ -272,22 +316,27 @@ Author: Code with the Carolinas
                 <th>Provider</th>
                 <th>Address</th>
                 <th>Hours of Operation</th>
-                <th>Resources Provided</th>
+
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>Ingles Market</td>
-                <td>550 NC-9 Black Mountain, NC 28711</td>
-                <td>7 days/week, 9:00 am to 7:00 pm</td>
-                <td>Dry goods, ice, potable water</td>
-              </tr>
-              <tr>
-                <td>Chamber of Commerce</td>
-                <td>201 E. State St., Black Mountain, NC 28711</td>
-                <td>7 days/week, 9:00 am to 5:00 pm</td>
-                <td>Public info requests, volunteer coordination</td>
-              </tr>
+                <td>The Railyard</td>
+                <td>141 Richardson Blvd.<br />Black Mountain, NC 28711</td>
+                <td>7 days/week (<i>todos los días</i>)<br />8:00 am – 5:00 pm</td>
+                </tr>
+                <tr>
+                <td>United Methodist Church (operated by Bounty and Soul) <i>Iglesia Metodista</i></td>
+                <td>216 Whitson Ave.<br />Swannanoa, NC</td>
+                <td>Monday to Friday (<i>lunes a viernes</i>): 10:00 am to 5:00 pm<br />Saturday and Sunday (<i>sabado y domingo</i>): 10:00 am – 3:00 pm
+                </td>
+                </tr>
+                <tr>
+                <td>Valley Hope Church</td>
+                <td>115 Rockdale Rd,<br />Swannanoa, NC 28778
+                </td>
+                <td>Monday to Friday (<i>lunes a viernes</i>): 4:30 to 6:00 pm</td>
+                </tr>
             </tbody>
           </table>
           </nav>
