add expand direction in index.html

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ Author: Code with the Carolinas
      **** Black Mountain Volunteer Corps to update for LAST UPDATE DATE ****  
 
    Update by Typing over the Date, this is free text so you can format date and time as see fit-->
+   
   <p><strong>Last Updated: 15 October 2024</strong></p></br></p>
 
   <!-- 4. Official Town-Direct Resources 
@@ -103,7 +104,7 @@ Author: Code with the Carolinas
   <section>
 
     <h2>Official Town-Directed Resources (<i>Recursos Officiales Patrocinados por la Alcaldía</i>)</h2></br>
-
+    <p><strong>Expand Resource Tables Below</strong></p></br></p>
     <details class="tab-content">
       <summary>Official Town-Directed Resources</summary>
       <table>
@@ -211,7 +212,7 @@ Author: Code with the Carolinas
 
  -->
   <h2>Unofficial Voluntary Resources (<i>Recursos Voluntarios no Officiales</i>)
-  </h2></br>
+  </h2></br><p><strong>Expand Resource Tables Below</strong></p></br></p>
   <p>INFORMATION PROVIDED ONLY AS A COURTESY; THE TOWN OF BLACK MOUNTAIN IS NOT RESPONSIBLE FOR THIS INFORMATION; <br>
     <i>(INFORMACIÓN PROVISTA SOLO COMO CORTESIA, EL PUEBLO DE BLACK MOUNTAIN NO ES RESPONSABLE POR ESTA INFORMACIÓN)</i>
   </p>
