update comments to add table

--- a/index.html
+++ b/index.html
@@ -96,6 +96,36 @@ Author: Code with the Carolinas
               <td>7 days/week, 9:00 am to 5:00 pm</td>
               <td>Public info requests, volunteer coordination</td>
             </tr>
+      
+      To add a new table (in existing section):
+      <details class="tab-content">
+    <summary>Table Name</summary>
+
+    <h2>Table Name</h2>
+    </p>
+    <br>
+    <div class="table-container">
+      <table href="#subtabX-1">
+        <thead>
+          <tr>
+            <th>Provider</th>
+            <th>Address</th>
+            <th>Hours of Operation</th>
+            <th>Resources</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Provider Name</td>
+            <td>Address</td>
+            <td>Hours</td>
+            <td>Resources</td>
+          </tr>
+          <tr>
+        </tbody>
+      </table>
+
+  </details>
 
  -->
 
@@ -209,6 +239,36 @@ Author: Code with the Carolinas
               <td>201 E. State St., Black Mountain, NC 28711</td>
               <td>7 days/week, 9:00 am to 5:00 pm</td>
             </tr>
+
+           To add a new table (in existing section):
+      <details class="tab-content">
+    <summary>Table Name</summary>
+
+    <h2>Table Name</h2>
+    </p>
+    <br>
+    <div class="table-container">
+      <table href="#subtabX-1">
+        <thead>
+          <tr>
+            <th>Provider</th>
+            <th>Address</th>
+            <th>Hours of Operation</th>
+
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Provider Name</td>
+            <td>Address</td>
+            <td>Hours</td>
+         
+          </tr>
+          <tr>
+        </tbody>
+      </table>
+
+  </details>
 
  -->
   <h2>Unofficial Voluntary Resources (<i>Recursos Voluntarios no Officiales</i>)
